--- a/index.html
+++ b/index.html
@@ -6,16 +6,62 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Canvas</title>
     <script src="jquery.js"></script>
+    <style>
+        *{
+            font-size: 1rem;
+        }
+
+        .container{
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            width: 100vw;
+        }
+
+        .container>div{
+            display: flex;
+            flex-direction: column-reverse;
+        }
+
+        button{
+            display: block;
+            margin: 2rem auto;
+        }
+
+        .button{
+            padding: 1rem;
+            background-color: #31628d;
+            color: #ffffff;
+
+            border: 0;
+            border-radius: 4px;
+        }
+
+        canvas{
+            max-width: 30vw;
+        }
+
+        body{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
-    <input type="file" id="input_s"/>
-    <canvas id="imageCanvas" class="canvas"></canvas>
-<br><br>
-    <input type="file" id="input_t"/>
-    <canvas id="imageCanvas2" class="canvas"></canvas>
-
-    <br>
-    <button id="button">Hello</button>
+    <div>
+        <div class="container">
+            <div>
+                <input type="file" id="input_s" class="button"/>
+                <canvas id="imageCanvas" class="canvas"></canvas>
+            </div>
+            <div>
+                <input type="file" id="input_t" class="button"/>
+                <canvas id="imageCanvas2" class="canvas"></canvas>
+            </div>
+        </div>
+        <button id="button" class="button">Цветокоррекция</button>
+    </div>
     <script type="text/javascript">
         var canvas = document.getElementsByTagName('canvas')[0];
         var canvas2 = document.getElementsByTagName('canvas')[1];
